# python-github-actions

./: README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/entity/: like.py  title.py
tests/entity/: test_like.py  test_title.py
