[metadata]
name = Web Scraping Youtube
description = Show data of youtube video
author = Carlos Daniel
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9
    Programming Language :: Python :: 3 :: 3.10
    Programming Language :: Python :: 3 :: 3.11

[options]
packages = 
    entity
install_requires =
    beautifulsoup4==4.12.2
python_requires = >=3.8
package_dir = 
    =src
zip_safe = no

[options.extra_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
entity = py.typed

[flake8]
max-line-length = 160
